--- a/main.css
+++ b/main.css
@@ -64,3 +64,10 @@ body {
     border: 4px solid #fff;
     border-radius: 150px;
   }
+
+  .mortyPickleImg{
+    border: 4px solid rgb(0, 0, 0);
+    border-radius: 150px;
+    height: 100px;
+    width: 100px;
+  }
