little input style idea

--- a/main.css
+++ b/main.css
@@ -24,7 +24,6 @@ body {
   position: absolute;
   top: 10px;
   right: 10px;
-  ;
   height: 50px;
   width: 80px;
   border-radius: 20%;
@@ -76,12 +75,12 @@ body {
 
 .rickStyleButton {
   background-color: #c2fbd7;
-  border-radius: 10px;
+  border-radius: 0.625em;
   box-shadow: rgba(44, 187, 99, .2) 0 -25px 18px -14px inset, rgba(44, 187, 99, .15) 0 1px 2px, rgba(44, 187, 99, .15) 0 2px 4px, rgba(44, 187, 99, .15) 0 4px 8px, rgba(44, 187, 99, .15) 0 8px 16px, rgba(44, 187, 99, .15) 0 16px 32px;
   color: green;
   cursor: pointer;
   display: inline-block;
-  padding: 7px 20px;
+  padding: 0.45em 1.25em;
   text-align: center;
   text-decoration: none;
   transition: all 250ms;
@@ -94,4 +93,12 @@ body {
 .rickStyleButton:hover {
   box-shadow: rgba(44, 187, 99, .35) 0 -25px 18px -14px inset, rgba(44, 187, 99, .25) 0 1px 2px, rgba(44, 187, 99, .25) 0 2px 4px, rgba(44, 187, 99, .25) 0 4px 8px, rgba(44, 187, 99, .25) 0 8px 16px, rgba(44, 187, 99, .25) 0 16px 32px;
   transform: scale(1.05);
+}
+
+input[type="text"] {
+  border-radius: 0.625em;
+  display: inline-block;
+  box-sizing: border-box;
+  width: 25%;
+  padding: 0.5rem 0.75rem;
 }
