--- a/main.css
+++ b/main.css
@@ -102,3 +102,32 @@ input[type="text"] {
   width: 25%;
   padding: 0.5rem 0.75rem;
 }
+
+.rickycard {
+  margin-top: 1em;
+  margin-bottom: 1em;
+  background-color: #c2fbd7;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  width: 25%;
+  border-radius: 10px;
+}
+
+.rickycard:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+.rickycardimg {
+  border-radius: 5px 5px 0 0;
+  width: 100%;
+}
+
+.container {
+  padding: 2px 16px;
+}
+
+.cardholder {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
