--- a/main.css
+++ b/main.css
@@ -110,16 +110,18 @@ input[type="text"] {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   width: 25%;
-  border-radius: 10px;
+  border-radius: 2em;
 }
 
 .rickycard:hover {
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
-.rickycardimg {
+#cardimg {
   border-radius: 5px 5px 0 0;
   width: 100%;
+  border-top-left-radius: 2em;
+  border-top-right-radius: 2em;
 }
 
 .container {
