--- a/main.css
+++ b/main.css
@@ -67,10 +67,10 @@ body {
 }
 
 .mortyPickleImg {
-  border: 4px solid rgb(0, 0, 0);
-  border-radius: 10px;
-  height: 100px;
-  width: 100px;
+  border: 2px solid rgb(0, 0, 0);
+  border-radius: 1.5em;
+  height: 150px;
+  width: 150px;
 }
 
 .rickStyleButton {
@@ -114,7 +114,7 @@ input[type="text"] {
 }
 
 .rickycard:hover {
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.25);
 }
 
 #cardimg {
