--- a/portal.css
+++ b/portal.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(https://wallpaperaccess.com/full/2398638.jpg);
+    background-image: url("https://wallpaperaccess.com/full/2398638.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
