--- a/css/main.css
+++ b/css/main.css
@@ -3,3 +3,11 @@ body {
     margin: 0;
     overflow-x: hidden;
 }
+
+body {
+    background-image: url("https://cdn.wallpapersafari.com/96/51/du2E3U.png");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
+}
