--- a/css/main.css
+++ b/css/main.css
@@ -16,5 +16,5 @@ body {
 }
 
 .otherBackground {
-    background-image: url(https://c4.wallpaperflare.com/wallpaper/643/54/374/firewatch-gamer-mountains-rick-and-morty-wallpaper-preview.jpg);
+    background-image: url("https://c4.wallpaperflare.com/wallpaper/643/54/374/firewatch-gamer-mountains-rick-and-morty-wallpaper-preview.jpg");
 }
