--- a/css/main.css
+++ b/css/main.css
@@ -12,9 +12,9 @@ body {
 }
 
 .backgroundImage {
-    background-image: url("https://cdn.wallpapersafari.com/96/51/du2E3U.png");
+    background-image: url("https://wallpapercave.com/dwp2x/wp1822739.jpg");
 }
 
 .otherBackground {
-    background-image: url("https://c4.wallpaperflare.com/wallpaper/643/54/374/firewatch-gamer-mountains-rick-and-morty-wallpaper-preview.jpg");
+    background-image: url("https://wallpapercave.com/wp/wp1822726.jpg");
 }
