--- a/css/creators.css
+++ b/css/creators.css
@@ -1,6 +1,15 @@
 body {
-    background-image: url("https://wallpaperaccess.com/full/2398638.jpg");
+    background-image: url("https://wallpapercave.com/wp/wp1822725.png");
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-position: center;
+    background-position: top;
+    background-size: cover;
+}
+
+.nav-text {
+    text-shadow: 2px 2px 3px #000000;
+}
+
+.nav-text:hover {
+    text-shadow: 3px 3px 3px #000000;
 }
