--- a/css/creators.css
+++ b/css/creators.css
@@ -5,7 +5,7 @@ body {
 }
 
 body {
-    background-image: url("https://wallpapercave.com/wp/wp1822725.png");
+    background-image: url("/assets/creatorsbackground.png");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: top;
