--- a/css/portal.css
+++ b/css/portal.css
@@ -9,4 +9,5 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
+    background-size: cover;
 }
